--- a/public/admin-client/index.html
+++ b/public/admin-client/index.html
@@ -1,1 +1,41 @@
-<!doctype html><html lang="es"><head><meta charset="utf-8"><title>PortalAdminClient</title><base href="/admin-client/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="manifest" href="manifest.json"><link rel="icon" type="image/x-icon" href="favicon.ico"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"><script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script><link href="styles.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><audio id="push-audio" src="assets/sound/airhorn.wav"></audio><script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body><script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2WOtnid7SM473FFkkcRDAQP8G15GKxuM&libraries=places"></script><script defer="defer" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script></html>
+<!doctype html><html lang="es"><head><meta charset="utf-8"><title>PortalAdminClient</title><base href="/admin-client/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="manifest" href="manifest.json"><link rel="icon" type="image/x-icon" href="favicon.ico"><!-- Compiled and minified CSS --><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"><script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script><link href="styles.b87ec6c37fe6be156b73.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><audio id="push-audio" src="assets/sound/airhorn.wav"></audio><script type="text/javascript" src="inline.55db2d2322fe004980f7.bundle.js"></script><script type="text/javascript" src="polyfills.abdf53ca655716e505e0.bundle.js"></script><script type="text/javascript" src="main.3aa410ed0ae4fd1986c4.bundle.js"></script></body><script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2WOtnid7SM473FFkkcRDAQP8G15GKxuM&libraries=places"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script><script type="text/javascript">window.M_initSelects = function (elems) {
+      elems = elems || document.querySelectorAll('select');
+      var instances = M.FormSelect.init(elems);
+      return instances;
+    }
+
+    window.M_initDropdown = function () {
+      var elems = document.querySelectorAll('.dropdown-trigger');
+      var instances = M.Dropdown.init(elems);
+    }
+
+    window.M_initSideNav = function() {
+      var elems = document.querySelectorAll('.sidenav');
+      var instances = M.Sidenav.init(elems);
+    }
+
+    window.M_initTimepicker = function () {
+      var elems = document.querySelectorAll('.timepicker');
+      var instances = M.Timepicker.init(elems);
+    }
+
+    window.M_initModal = function (elems) {
+      var elems = elems || document.querySelectorAll('.modal');
+      var instances = M.Modal.init(elems);
+    }
+
+    window.M_updateInputs = function (elems) {
+      M.updateTextFields();
+    }
+
+    window.M_initAll = function () {
+      M_initSelects();
+      M_initDropdown();
+      M_initSideNav();
+      M_initTimepicker();
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+      window.M = M;
+      window.M_initAll();
+    });</script></html>
