--- a/public/admin-client/index.html
+++ b/public/admin-client/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="es"><head><meta charset="utf-8"><title>PortalAdminClient</title><base href="/admin-client/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="manifest" href="manifest.json"><link rel="icon" type="image/x-icon" href="favicon.ico"><!-- Compiled and minified CSS --><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"><script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script><link href="styles.b87ec6c37fe6be156b73.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><audio id="push-audio" src="assets/sound/airhorn.wav"></audio><script type="text/javascript" src="inline.55db2d2322fe004980f7.bundle.js"></script><script type="text/javascript" src="polyfills.abdf53ca655716e505e0.bundle.js"></script><script type="text/javascript" src="main.3aa410ed0ae4fd1986c4.bundle.js"></script></body><script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2WOtnid7SM473FFkkcRDAQP8G15GKxuM&libraries=places"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script><script type="text/javascript">window.M_initSelects = function (elems) {
+<!doctype html><html lang="es"><head><meta charset="utf-8"><title>PortalAdminClient</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="manifest" href="manifest.json"><link rel="icon" type="image/x-icon" href="favicon.ico"><!-- Compiled and minified CSS --><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"><script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script><link href="styles.b87ec6c37fe6be156b73.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><audio id="push-audio" src="assets/sound/airhorn.wav"></audio><script type="text/javascript" src="inline.11e155a6ec1519dd0109.bundle.js"></script><script type="text/javascript" src="polyfills.abdf53ca655716e505e0.bundle.js"></script><script type="text/javascript" src="main.4841f03a6e6b27746ff2.bundle.js"></script></body><script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2WOtnid7SM473FFkkcRDAQP8G15GKxuM&libraries=places"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script><script type="text/javascript">window.M_initSelects = function (elems) {
       elems = elems || document.querySelectorAll('select');
       var instances = M.FormSelect.init(elems);
       return instances;
@@ -9,9 +9,10 @@
       var instances = M.Dropdown.init(elems);
     }
 
-    window.M_initSideNav = function() {
-      var elems = document.querySelectorAll('.sidenav');
+    window.M_initSideNav = function(elems) {
+      var elems = elems ||  document.querySelectorAll('.sidenav');
       var instances = M.Sidenav.init(elems);
+      return instances;
     }
 
     window.M_initTimepicker = function () {
@@ -29,13 +30,13 @@
     }
 
     window.M_initAll = function () {
-      M_initSelects();
-      M_initDropdown();
-      M_initSideNav();
-      M_initTimepicker();
+      // M_initSelects();
+      // M_initDropdown();
+      // M_initSideNav();
+      // M_initTimepicker();
     }
 
     document.addEventListener('DOMContentLoaded', function () {
       window.M = M;
-      window.M_initAll();
+      // window.M_initAll();
     });</script></html>
